This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/4/25: SEM_4-1-20
2/4/25: Fixed beam size shown for multishot when using illuminated area,
broken 3/17/24 (In 4.1).

2/3/25: Fixed stepping camera length between D amd LAD in scope control panel
(In 4.1).

1/27/25: Fixed initialization of some parameters (hex and custom) when
montaging with multiple Records (In 4.1).

1/8/25: Fixed getting standard LM focus for EFTEM when it has different
highest LM mag and a value is stored for the highest LM mag in TEM (In 4.1).

12/19/24: Fixed pixel size stored in snapshot (In 4.1).

12/13/24: Fixed dose at camera in Scope Status panel being off by 4 for
K2/K3 (In 4.1).

12/10/24: Fixed crash running Python commands with an error in
one-line-script (In 4.1).

12/2/24: SEM_4-1-19
12/4/24: Fixed updating of libraries when building stable release packages;
autocorrelation peak fix of 10/30 was not in 4.1.18 (In 4.1).

11/10/24: Fixed installer copying Microsoft dlls on XP (In 4.1).
10/31/24: SEM_4-1-18
10/31/24: Error details are now included in the popup message about an error
calling a JEOL scope function (In 4.1).

10/30/24: Fixed going back into Low Dose after Realign to Item , which crashed
when accounting for some offsets (In 4.1).

10/24/24: Fixed the 4 script commands relating stage and image coordinates to
work correctly for Navigator coordinates and clarified help (In 4.1).

10/16/24: Fixed script commands Get/SetSTEMBrightContrast (In 4.1).

10/2/24: Fixed getting data from first inventory call to JEOL (In 4.1).

9/30/24: Fixed failure to find autocorrelation peaks at X = 0 (In 4.1).

9/26/24: SEM_4-1-17
9/26/24: Fixed montage setup so it opens HQ settings when MontageAllowHQinLD
property is used (In 4.1).
