@@ -305,6 +305,7 @@ BOOL_PROP_TEST("UseFilterInTEMMode", scope->, UseFilterInTEMMode)
 FLOAT_PROP_TEST("HitachiZMicronsPerGroove", mWinApp->mComplexTasks->, ZMicronsPerDialMark)
 INT_PROP_TEST("HitachiSpotStepDelay", scope->, HitachiSpotStepDelay)
 INT_PROP_TEST("HitachiDoesBSforISflags", scope->, HitachiDoesBSforIS)
+BOOL_PROP_TEST("HitachiMagResetsISinHC", scope->, HitachiResetsISinHC)
 BOOL_PROP_TEST("InvertStageXAxis", shiftManager->, InvertStageXAxis)
 INT_PROP_TEST("StageInvertsZAxis", shiftManager->, StageInvertsZAxis)
 INT_PROP_TEST("RotateHeaderAngleBy180", mWinApp->mBufferManager->, RotateAxisAngle)
