@@ -4747,6 +4747,11 @@
             HC mode.</TD>
         </TR>
         <TR VALIGN="top">
+          <TD class="style3">HitachiMagResetsISinHC</TD>
+          <TD class="auto-style2">Set to 1 if changing magnification in HC mode resets image 
+            shift, which is done with ISF.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD class="style3">HitachiDoesBSforISflags</TD>
           <TD class="auto-style2">Flags indicating in which magnification modes the Hitachi scope
             does beam shift when an image shift is applied, so that SerialEM will not
